--- a/styles/style.css
+++ b/styles/style.css
@@ -117,10 +117,10 @@ img {
   .header-title {
     float: left;
     width: 40%;
-    height: 43vw;
+    /* height: 43vh; */
     /* border: 2px solid coral; */
     font-family: 'Petit Formal Script', cursive;
-    padding-top: 18%;
+    padding-top: 15%;
   }
 
   .header-title h1 {
@@ -134,17 +134,20 @@ img {
 
   .header-image {
     width: 60%;
-    height: 47vw;
     float: left;
-    padding-bottom: 3%;
-    padding-left: 3%;
+    /* border: 2px solid purple; */
+  }
+
+  .section1-image {
+    width: 85%;
+    height: 85%;
+    margin-left:6%;
     /* border: 2px solid coral; */
   }
 
-  .header-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  .section1-image img {
+    padding-left: 7%;
+    padding-bottom: 5%;
   }
 
   .section1-icons {
@@ -174,30 +177,30 @@ img {
   /* section1 */
 
   .section1 {
-    /* height: 34vw; */
+    height: 34vw;
     background: #500801;
     padding-top: 5%;
-    padding-bottom: 5%;
-    /* clear: both; */
   }
 
   .hand-crafted-image {
+    width: 370px;
+    height: 370px;
     float: left;
-    margin-right: 5%;
-    /* border: 2px solid coral; */
   }
 
   .hand-crafted-image img {
-    width: 400px;
-    height: 400px; 
-    object-fit: cover; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     object-position: 5px 10%;
   }
 
   .section-content {
-    width: 100%;
-    /* float: left; */
-    /* border: 2px solid coral;     */
+    width: calc(75% - 10%);
+    float: left;
+    margin-left: 5%;
+    height: 20vw;
+    /* border: 2px solid coral; */
   }
   .section1 h2 {
     font-family: 'Petit Formal Script', cursive;
@@ -214,10 +217,6 @@ img {
     font-weight: 300;
   }
 
-  .section-content button {
-    color:#ffffff;
-  }
-
   .section-content button p {
     color:#ffffff;
     text-align: center;
@@ -226,9 +225,24 @@ img {
   }
 
   button:hover{
-    background: #ffffff;
+    background: #815600;
     color: #1d0303;
     transition: all 0.3s;
+  }
+
+
+  .section2 h2 {
+    text-align: center;
+    margin: 3% 0;
+   
+  }
+
+  .section2-image-container li {
+    width: calc((100% / 3) - 2%);
+    float: left;
+    margin: 1%;
+    list-style-type: none;
+    margin-bottom: 8%;
   }
 
   /* section 2 */
@@ -488,7 +502,15 @@ img {
     }
 
 /* Media Query Smaller Computer View */
-@media only screen and (max-width: 1579px) {
+@media only screen and (max-width: 1553px) {
+
+  .header-title h1 {
+    text-align: right;
+    color: #ffff;
+    line-height: 4.6rem;
+    font-size: 4rem;
+  }
+
 }
 
 @media only screen and (max-width: 1195px) {
