--- a/styles/style.css
+++ b/styles/style.css
@@ -507,82 +507,130 @@ img {
   .header-title h1 {
     text-align: right;
     color: #ffff;
-    line-height: 4.6rem;
-    font-size: 4rem;
+    line-height: 4rem;
+    font-size: 3.5rem;
   }
 
 }
 
-@media only screen and (max-width: 1195px) {
+@media only screen and (max-width: 1453px) {
+  .hand-crafted-image {
+    width: 300px;
+    height: 300px;
+    float: left;
+  }
+  .section1 h2 {
+    font-family: 'Petit Formal Script', cursive;
+    color: #ffff;
+    font-size: 2.2rem;
+  }
+  
+  .section-content p {
+    color: #ffffff;
+    font-size: 0.8rem;
+    line-height: 1.45;
+    letter-spacing: 0.2px;
+    margin-top: 2%;
+    font-weight: 300;
+
+  }
 }
+
 /* Media Query Smaller Computer View */
-@media only screen and (max-width: 1415px) {
+/* @media only screen and (max-width: 1415px) {
  .footer-links{
-      float: left;
-      /* border: 2px dotted black; */
-      width: 5%;
+    float: left;
+    width: 5%;
     }
 
     .stay-updated-section {
       float: left;
-      /* border: 2px dotted black; */
+      border: 2px dotted black;
       width: 65%;
     }
 
     .contact-section {
       float: left;
-      /* border: 2px dotted black; */
+      border: 2px dotted black;
       width: 30%;
       white-space: nowrap;
       padding-top: 5%;
     }
-}
+} */
 
 /* Media Query Smaller Computer View */
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1222px) {
 
-    .footer-links {
-      float: left;
-      border: 2px dotted black;
-      padding-top: 8%;
-      width: 100%;
-      margin: 0 auto;
+  .header-title h1 {
+    text-align: right;
+    color: #ffff;
+    line-height: 3.3rem;
+    font-size: 2.8rem;
+  }
 
-    }
+  .hand-crafted-image {
+    width: 250px;
+    height: 250px;
+    float: left;
+  }
+  .section1 h2 {
+    font-family: 'Petit Formal Script', cursive;
+    color: #ffff;
+    font-size: 1.5rem;
+  }
+  
+  .section-content p {
+    color: #ffffff;
+    font-size: 0.7rem;
+    line-height: 1.45;
+    letter-spacing: 0.2px;
+    margin-top: 2%;
+    font-weight: 300;
 
-    .stay-updated-section {
-      float: left;
-      width: 100%;
-      border: 2px dotted black;
-    }
+  }
 
-    .subscribe-section span {
-      display: block;
-    }
+  .footer-links {
+    float: left;
+    border: 2px dotted black;
+    padding-top: 8%;
+    width: 100%;
+    margin: 0 auto;
 
-    .stay-updated-section button {
-      color: #ffffff;
-      padding: 1%;
-      width: 20%;
-      margin: 0 26%;
-    }
+  }
 
-    .contact-section {
-      float: left;
-      border: 2px dotted black;
-      white-space: nowrap;
-      padding-top: 5%;
-      width: 100%;
-    }
+  .stay-updated-section {
+    float: left;
+    width: 100%;
+    border: 2px dotted black;
+  }
 
-    .footer-links {
-      margin: 0;
-      padding: 0;
-    }
+  .subscribe-section span {
+    display: block;
+  }
 
-    .footer-links a {
-      font-size: 1.2rem;
-    }
+  .stay-updated-section button {
+    color: #ffffff;
+    padding: 1%;
+    width: 20%;
+    margin: 0 26%;
+  }
+
+  .contact-section {
+    float: left;
+    border: 2px dotted black;
+    white-space: nowrap;
+    padding-top: 5%;
+    width: 100%;
+  }
+
+  .footer-links {
+    margin: 0;
+    padding: 0;
+  }
+
+  .footer-links a {
+    font-size: 1.2rem;
+  }
 
   .footer-links ul {
      margin: 0 26%;
