--- a/styles/style.css
+++ b/styles/style.css
@@ -308,7 +308,7 @@ img {
   .fall-trends-container {
     padding-left: 7%;
   }
-  
+
   .fall-trends-container h2 {
     margin-top: 17%;
   }
@@ -757,10 +757,37 @@ img {
       top: 59%;
   }
 
-  vegan-leather-container, .vegan-leather-image-container {
+  .vegan-leather-container {
     width: 100%;
     height: 60vh;
+    /* position: absolute; */
   }
 
+  .vegan-leather-image-container {
+    float: none;
+    width: 100%;
+    position: relative;
+    top: 300px;
+  }
+
+  .vegan-leather-image-container img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+  }
+
+  .vegan-leather-inner-container {
+      position: relative;
+      top: 59%;
+  }
+  
+
+  .section6 {
+    background: #500801;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    position: relative;
+    margin-top: 50%;  
+  }
   
 }
