--- a/styles/style.css
+++ b/styles/style.css
@@ -767,7 +767,7 @@ img {
     float: none;
     width: 100%;
     position: relative;
-    top: 300px;
+    bottom: 111px;
   }
 
   .vegan-leather-image-container img {
